# project_fastapi_3

./: .gitignore  config.py  db_engine.py  info.md  log.txt  main.py  pyproject.toml
model/: model.py
public/: car_router.py  region_router.py
sql/: cars.csv  regions.csv  sql_.txt
