[tool.poetry]
name = "fastapi3"
version = "0.1.0"
description = ""
authors = ["Timur Kuchin <kuchin.timur@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"
uvicorn = "^0.25.0"
asyncpg = "^0.29.0"
postgres = "^4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
